[package]
authors = ["Open Whisper Systems", "jessa0"]
name    = "raft"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
bytes     = { version = "1.0", default-features = false, features = [] }
log       = "0.4"
prost     = { version = "0.7", default-features = false, features = ["prost-derive"] }
rand_core = { version = "0.6", default-features = false, features = [] }

[build-dependencies]
prost-build = { version = "0.7" }
